<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="kotlin.jvm.functions.Function0" />

        <variable
            name="clickListener"
            type="Function0" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/shoeNameLayout"
            android:text="@string/label_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/OutlinedTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            app:endIconMode="clear_text"
            app:placeholderText="@string/hint_enter_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/shoeNameLayout"
            android:text="@string/label_pass" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/OutlinedTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/hint_enter_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:onClick="@{() -> clickListener.invoke()}"
            android:text="@string/button_sign_in"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickListener.invoke()}"
            android:text="@string/button_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</layout>