<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="kotlin.jvm.functions.Function0" />

        <variable
            name="clickListener"
            type="Function0" />
    </data>
<!--Very simple layout showing 2 text views and button , on a vertical orientation ,  no need for constraint layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:text="@string/text_first_instruction"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

        <TextView
            style="@style/Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_second_instruction"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{()-> clickListener.invoke()}"
            android:text="@string/button_get_started" />

    </LinearLayout>
</layout>